Z-index issues in navbar basic search after input-group update

--- a/packages/clay/src/scss/lexicon-base/_navbar.scss
+++ b/packages/clay/src/scss/lexicon-base/_navbar.scss
@@ -65,7 +65,7 @@
 		border-color: transparent;
 		left: 0;
 		position: absolute;
-		z-index: 3;
+		z-index: 4;
 
 		&:active{
 			box-shadow: none;
